<resources>
    <string name="app_name">Temperature Detector</string>
    <string name="live_temperature_detector_and_alert">Live Temperature Detector And Alert</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="full_name">Full Name</string>
</resources>